--- a/src/lumni.html
+++ b/src/lumni.html
@@ -62,7 +62,7 @@
         </div>
     </header>
 
-    <header class="text-black body-font bg-[#F2EDE6]">
+    <header class="text-black body-font bg-[#F2EDE6] border-b-2 border-b-gray-300">
         <div class="container mx-auto flex flex-wrap p-5 px-0 flex-col md:flex-row items-center">
             <div class="flex space-x-4 title-font items-center text-gray-900 mb-4 md:mb-0">
                 <a href="#" class="hover:font-bold">Welcome</a>
@@ -103,22 +103,106 @@
         </div>
     </header>
 
-    <section class="flex relative bg-[#E6DCCF] border-t border-t-[#E6DCCF]">
+    <section class="relative bg-[#E6DCCF] border-t border-t-[#E6DCCF]">
         <!-- Simulate border -->
-        <div class="after:content-[''] after:w-7 after:absolute after:top-0 after:left-0 after:bg-[#3F52FF] after:h-[100%] ">X</div>
+        <div
+            class="after:content-[''] after:w-7 after:absolute after:top-0 after:left-0 after:bg-[#3F52FF] after:h-[100%] ">
+        </div>
 
-        <div class="w-full border-l-8 border-green-300 ps-6">
-            <!-- start -->
+        <!-- start bread-crubs -->
+        <div class="w-full border-l-8 border-green-300 ps-9">
             <div class="flex items-center space-x-2 my-4 text-sm">
-                <!-- Primaire, CP, Maths -->
                 <a href="#" class="hover:underline">Primaire</a>
                 <a href="#" class="hover:underline border-x border-x-black px-2">CP</a>
                 <a href="#" class="hover:underline font-bold">Maths</a>
             </div>
-            <!-- end -->
+        </div>
+        <!-- end bread-crubs -->
+
+        <div class="flex">
+            <div class="w-1/3 max-w-[280px]"></div>
+            <div class="w-full pb-12 pr-8 border-b border-b-[#E6DCCF]">
+                <div class="flex items-start space-x-4">
+                    <div class="bg-white p-4 py-6 font-bold text-3xl space-y-4">
+                        <h3>Math</h3>
+                        <h3>in CP</h3>
+                    </div>
+                    <img src="https://www.lumni.fr/images/emojis/smiling-face.png" class="max-w-16 -mt-1.5">
+                </div>
+                <p class="font-bold text-[#48484d] my-4 mt-3">Choose the chapter you want to review...</p>
+
+                <!-- Chapters -->
+                <div class="grid grid-cols-2 gap-6 mt-3 text-[#1f1f1f]">
+                    <!-- A chapter card -->
+                    <div
+                        class="flex items-center justify-between p-2 py-4 pl-6 bg-white rounded-2xl border border-b-2 border-black shadow-md shadow-[#393939] cursor-pointer">
+                        <div class="text-sm leading-6">
+                            <p class="uppercase font-light">chapter 1</p>
+                            <p class="font-bold text-lg">Numbers and calculations</p>
+                        </div>
+
+                        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24">
+                            <path fill="currentColor"
+                                d="m13.292 12l-4.6-4.6l.708-.708L14.708 12L9.4 17.308l-.708-.708z" />
+                        </svg>
+                    </div>
+                    <div
+                        class="flex items-center justify-between p-2 py-4 pl-6 bg-white rounded-2xl border border-b-2 border-black shadow-md shadow-[#393939] cursor-pointer">
+                        <div class="text-sm leading-6">
+                            <p class="uppercase font-light">chapter 2</p>
+                            <p class="font-bold text-lg">Space and geometry</p>
+                        </div>
+
+                        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24">
+                            <path fill="currentColor"
+                                d="m13.292 12l-4.6-4.6l.708-.708L14.708 12L9.4 17.308l-.708-.708z" />
+                        </svg>
+                    </div>
+                    <div
+                        class="flex items-center justify-between p-2 py-4 pl-6 bg-white rounded-2xl border border-b-2 border-black shadow-md shadow-[#393939] cursor-pointer">
+                        <div class="text-sm leading-6">
+                            <p class="uppercase font-light">chapter 3</p>
+                            <p class="font-bold text-lg">Sizes and measurements</p>
+                        </div>
+
+                        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24">
+                            <path fill="currentColor"
+                                d="m13.292 12l-4.6-4.6l.708-.708L14.708 12L9.4 17.308l-.708-.708z" />
+                        </svg>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
+    <section class="relative bg-[#F2EDE6]">
+        <div
+            class="after:content-[''] after:w-7 after:absolute after:top-0 after:left-0 after:bg-[#2FC97F] after:h-[100%] ">
+        </div>
+
+        <div class="flex">
+            <div class="w-1/3 max-w-[280px]"></div>
+            <div class="w-full pb-12 pr-8">
+                <div class="p-4 my-7 mb-14 bg-white text-2xl font-bold max-w-48">
+                    For further...
+                </div>
+                <div class="p-4 my-7 mt-4 bg-white text-2xl font-bold max-w-72">
+                    Maths files and series
+                </div>
+
+                <!--  -->
+                <div class="grid grid-cols-3 gap-6">
+                    <div class="flex flex-col items-center justify-center relative w-72 p-2 px-3 space-y-4 bg-[#F3E5B9] rounded-[3.5rem]">
+                        <div>
+                            <img src="https://medias.lumni.fr/tTijySyKdXPFveCxBILFxx9rcSA/276x189/filters:focal(513x562:512x561):quality(80):max_bytes(120000)/5e6fa8f9a8a33618ee014643"
+                                class="rounded-t-[3.5rem] object-cover">
+                        </div>
+                        <span class="absolute top-0 left-0 p-1 px-3 z-1 rounded-full text-xs bg-[#F3E5B9]">case</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <script>
         const tongue = document.querySelector('.tongue');
