--- a/src/lumni.html
+++ b/src/lumni.html
@@ -135,7 +135,7 @@
                 <div class="grid grid-cols-2 gap-6 mt-3 text-[#1f1f1f]">
                     <!-- A chapter card -->
                     <div
-                        class="flex items-center justify-between p-2 py-4 pl-6 bg-white rounded-2xl border border-b-2 border-black shadow-md shadow-[#393939] cursor-pointer">
+                        class="flex items-center justify-between p-2 py-4 pl-6 bg-white rounded-2xl border border-b-2 border-black shadow-md shadow-[#393939] cursor-pointer hover:bg-[#EFEFEF]">
                         <div class="text-sm leading-6">
                             <p class="uppercase font-light">chapter 1</p>
                             <p class="font-bold text-lg">Numbers and calculations</p>
@@ -147,7 +147,7 @@
                         </svg>
                     </div>
                     <div
-                        class="flex items-center justify-between p-2 py-4 pl-6 bg-white rounded-2xl border border-b-2 border-black shadow-md shadow-[#393939] cursor-pointer">
+                        class="flex items-center justify-between p-2 py-4 pl-6 bg-white rounded-2xl border border-b-2 border-black shadow-md shadow-[#393939] cursor-pointer hover:bg-[#EFEFEF]">
                         <div class="text-sm leading-6">
                             <p class="uppercase font-light">chapter 2</p>
                             <p class="font-bold text-lg">Space and geometry</p>
@@ -159,7 +159,7 @@
                         </svg>
                     </div>
                     <div
-                        class="flex items-center justify-between p-2 py-4 pl-6 bg-white rounded-2xl border border-b-2 border-black shadow-md shadow-[#393939] cursor-pointer">
+                        class="flex items-center justify-between p-2 py-4 pl-6 bg-white rounded-2xl border border-b-2 border-black shadow-md shadow-[#393939] cursor-pointer hover:bg-[#EFEFEF]">
                         <div class="text-sm leading-6">
                             <p class="uppercase font-light">chapter 3</p>
                             <p class="font-bold text-lg">Sizes and measurements</p>
@@ -180,24 +180,181 @@
             class="after:content-[''] after:w-7 after:absolute after:top-0 after:left-0 after:bg-[#2FC97F] after:h-[100%] ">
         </div>
 
+        <!--  -->
         <div class="flex">
             <div class="w-1/3 max-w-[280px]"></div>
             <div class="w-full pb-12 pr-8">
-                <div class="p-4 my-7 mb-14 bg-white text-2xl font-bold max-w-48">
+                <div class="p-4 my-7 mb-14 bg-white text-2xl font-bold max-w-48 text-center">
                     For further...
                 </div>
-                <div class="p-4 my-7 mt-4 bg-white text-2xl font-bold max-w-72">
+                <div class="p-4 my-7 mt-4 bg-white text-2xl font-bold max-w-72 text-center">
                     Maths files and series
                 </div>
 
-                <!--  -->
-                <div class="grid grid-cols-3 gap-6">
-                    <div class="flex flex-col items-center justify-center relative w-72 p-2 px-3 space-y-4 bg-[#F3E5B9] rounded-[3.5rem]">
+                <!-- slider cards -->
+                <div class="grid grid-cols-3 gap-10">
+                    <div
+                        class="flex flex-col items-center justify-center relative py-2 pb-24 space-y-4 bg-[#F3E5B9] rounded-[3.5rem] transform transition-transform duration-500 ease-in-out hover:scale-110">
                         <div>
                             <img src="https://medias.lumni.fr/tTijySyKdXPFveCxBILFxx9rcSA/276x189/filters:focal(513x562:512x561):quality(80):max_bytes(120000)/5e6fa8f9a8a33618ee014643"
                                 class="rounded-t-[3.5rem] object-cover">
+
+                            <div class="flex items-center justify-between mx-2 my-4 text-text-title">
+                                <div class="text-lg font-semibold leading-5">
+                                    <span class="block">The fundamentals:</span> <span>geometry</span>
+                                </div>
+                                <button
+                                    class="flex flex-col justify-center items-center rounded-full border border-black shadow-custom p-1 bg-white">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                                        <path fill="currentColor"
+                                            d="m12 19.654l-.758-.685q-2.448-2.236-4.05-3.829q-1.602-1.592-2.529-2.808q-.926-1.217-1.295-2.201Q3 9.146 3 8.15q0-1.908 1.296-3.204Q5.592 3.65 7.5 3.65q1.32 0 2.475.675T12 6.288Q12.87 5 14.025 4.325T16.5 3.65q1.908 0 3.204 1.296Q21 6.242 21 8.15q0 .996-.368 1.98q-.369.985-1.295 2.202q-.927 1.216-2.52 2.808q-1.592 1.593-4.06 3.83zm0-1.354q2.4-2.17 3.95-3.716q1.55-1.547 2.45-2.685t1.25-2.015Q20 9.006 20 8.15q0-1.5-1-2.5t-2.5-1q-1.194 0-2.204.682q-1.01.681-1.808 2.053h-.976q-.818-1.39-1.818-2.063q-1-.672-2.194-.672q-1.48 0-2.49 1Q4 6.65 4 8.15q0 .856.35 1.734t1.25 2.015t2.45 2.675Q9.6 16.112 12 18.3m0-6.825" />
+                                    </svg>
+                                </button>
+                            </div>
                         </div>
-                        <span class="absolute top-0 left-0 p-1 px-3 z-1 rounded-full text-xs bg-[#F3E5B9]">case</span>
+                        <span class="absolute -top-2.5 left-5 p-2 px-3 z-1 text-xs bg-[#F3E5B9]"
+                            style="border-radius: 0.75rem 0 0.75rem 0;">case</span>
+                    </div>
+                    <div
+                        class="flex flex-col items-center justify-center relative py-2 pb-24 space-y-4 bg-[#F3E5B9] rounded-[3.5rem] transform transition-transform duration-500 ease-in-out hover:scale-110">
+                        <div>
+                            <img src="https://medias.lumni.fr/_GH-WAIpcCkZwzq1ge3WM0JAo_c/276x189/filters:focal(286x270:285x269):quality(80):max_bytes(120000)/5dc2efae2055bf150f783454"
+                                class="rounded-t-[3.5rem] object-cover">
+
+                            <div class="flex items-center justify-between mx-2 my-4 text-text-title">
+                                <div class="text-lg font-semibold leading-5">
+                                    <span class="block">The fundamentals:</span> <span>geometry</span>
+                                </div>
+                                <button
+                                    class="flex flex-col justify-center items-center rounded-full border border-black shadow-custom p-1 bg-white">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                                        <path fill="currentColor"
+                                            d="m12 19.654l-.758-.685q-2.448-2.236-4.05-3.829q-1.602-1.592-2.529-2.808q-.926-1.217-1.295-2.201Q3 9.146 3 8.15q0-1.908 1.296-3.204Q5.592 3.65 7.5 3.65q1.32 0 2.475.675T12 6.288Q12.87 5 14.025 4.325T16.5 3.65q1.908 0 3.204 1.296Q21 6.242 21 8.15q0 .996-.368 1.98q-.369.985-1.295 2.202q-.927 1.216-2.52 2.808q-1.592 1.593-4.06 3.83zm0-1.354q2.4-2.17 3.95-3.716q1.55-1.547 2.45-2.685t1.25-2.015Q20 9.006 20 8.15q0-1.5-1-2.5t-2.5-1q-1.194 0-2.204.682q-1.01.681-1.808 2.053h-.976q-.818-1.39-1.818-2.063q-1-.672-2.194-.672q-1.48 0-2.49 1Q4 6.65 4 8.15q0 .856.35 1.734t1.25 2.015t2.45 2.675Q9.6 16.112 12 18.3m0-6.825" />
+                                    </svg>
+                                </button>
+                            </div>
+                        </div>
+                        <span class="absolute -top-2.5 left-5 p-2 px-3 z-1 text-xs bg-[#F3E5B9]"
+                            style="border-radius: 0.75rem 0 0.75rem 0;">case</span>
+                    </div>
+                    <div
+                        class="flex flex-col items-center justify-center relative py-2 pb-24 space-y-4 bg-[#F3E5B9] rounded-[3.5rem] transform transition-transform duration-500 ease-in-out hover:scale-110">
+                        <div>
+                            <img src="https://medias.lumni.fr/LIHQUuJezTSyGgQ4VAzX18iIolA/276x189/filters:focal(534x601:533x600):quality(80):max_bytes(120000)/5dc2efae2055bf150f78346a"
+                                class="rounded-t-[3.5rem] object-cover">
+
+                            <div class="flex items-center justify-between mx-2 my-4 text-text-title">
+                                <div class="text-lg font-semibold leading-5">
+                                    <span class="block">The fundamentals:</span> <span>geometry</span>
+                                </div>
+                                <button
+                                    class="flex flex-col justify-center items-center rounded-full border border-black shadow-custom p-1 bg-white">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                                        <path fill="currentColor"
+                                            d="m12 19.654l-.758-.685q-2.448-2.236-4.05-3.829q-1.602-1.592-2.529-2.808q-.926-1.217-1.295-2.201Q3 9.146 3 8.15q0-1.908 1.296-3.204Q5.592 3.65 7.5 3.65q1.32 0 2.475.675T12 6.288Q12.87 5 14.025 4.325T16.5 3.65q1.908 0 3.204 1.296Q21 6.242 21 8.15q0 .996-.368 1.98q-.369.985-1.295 2.202q-.927 1.216-2.52 2.808q-1.592 1.593-4.06 3.83zm0-1.354q2.4-2.17 3.95-3.716q1.55-1.547 2.45-2.685t1.25-2.015Q20 9.006 20 8.15q0-1.5-1-2.5t-2.5-1q-1.194 0-2.204.682q-1.01.681-1.808 2.053h-.976q-.818-1.39-1.818-2.063q-1-.672-2.194-.672q-1.48 0-2.49 1Q4 6.65 4 8.15q0 .856.35 1.734t1.25 2.015t2.45 2.675Q9.6 16.112 12 18.3m0-6.825" />
+                                    </svg>
+                                </button>
+                            </div>
+                        </div>
+                        <span class="absolute -top-2.5 left-5 p-2 px-3 z-1 text-xs bg-[#F3E5B9]"
+                            style="border-radius: 0.75rem 0 0.75rem 0;">case</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!--  -->
+        <div class="flex">
+            <div class="w-1/3 max-w-[280px]"></div>
+            <div class="w-full pb-12 pr-8">
+                <div class="p-4 my-7 mt-4 bg-white text-2xl font-bold max-w-[21rem] text-center">
+                    Maths games and quizzes
+                </div>
+
+                <div class="grid grid-cols-3 gap-10">
+                    <div
+                        class="flex flex-col items-center justify-center relative py-2 pb-5 space-y-4 bg-white rounded-[3.5rem] transform transition-transform duration-500 ease-in-out hover:scale-110">
+                        <div>
+                            <img src="https://medias.lumni.fr/09Ul5LgqWbyGAFMv-79g5TcPnn0/276x189/filters:focal(296460x-92130:296459x0):quality(80):max_bytes(120000)/64522c1465bc0ec7c10f3c87"
+                                class="rounded-t-[3.5rem] object-cover grayscale" />
+
+                            <div class="bg-[#F4D35E] pb-24 rounded-b-[3.5rem] relative">
+                                <div class="absolute text-xs bottom-10 left-4">Primary</div>
+                                <div class="flex items-center justify-between p-3 text-text-title">
+                                    <div class="text-md font-semibold leading-5">
+                                        <span class="block">Mental arithmetic:</span>
+                                        <span class="block">play with the</span>
+                                        operations vacuum...
+                                    </div>
+                                    <button
+                                        class="flex flex-col justify-center items-center rounded-full border border-black shadow-custom p-1 bg-white">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                            viewBox="0 0 24 24">
+                                            <path fill="currentColor"
+                                                d="m12 19.654l-.758-.685q-2.448-2.236-4.05-3.829q-1.602-1.592-2.529-2.808q-.926-1.217-1.295-2.201Q3 9.146 3 8.15q0-1.908 1.296-3.204Q5.592 3.65 7.5 3.65q1.32 0 2.475.675T12 6.288Q12.87 5 14.025 4.325T16.5 3.65q1.908 0 3.204 1.296Q21 6.242 21 8.15q0 .996-.368 1.98q-.369.985-1.295 2.202q-.927 1.216-2.52 2.808q-1.592 1.593-4.06 3.83zm0-1.354q2.4-2.17 3.95-3.716q1.55-1.547 2.45-2.685t1.25-2.015Q20 9.006 20 8.15q0-1.5-1-2.5t-2.5-1q-1.194 0-2.204.682q-1.01.681-1.808 2.053h-.976q-.818-1.39-1.818-2.063q-1-.672-2.194-.672q-1.48 0-2.49 1Q4 6.65 4 8.15q0 .856.35 1.734t1.25 2.015t2.45 2.675Q9.6 16.112 12 18.3m0-6.825" />
+                                        </svg>
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                        <span class="absolute -top-2.5 left-5 p-2 px-3 z-1 text-xs bg-white"
+                            style="border-radius: 0.75rem 0 0.75rem 0;">Restricted</span>
+                    </div>
+                    <div
+                        class="flex flex-col items-center justify-center relative py-2 pb-5 space-y-4 bg-white rounded-[3.5rem] transform transition-transform duration-500 ease-in-out hover:scale-110">
+                        <div>
+                            <img src="https://medias.lumni.fr/1Ema9_TGRyJ7LsvA0mPQ9hsI2uU/276x189/filters:focal(529x578:528x577):quality(80):max_bytes(120000)/5dc2efa42055bf150f7831bc"
+                                class="rounded-t-[3.5rem] object-cover" />
+
+                            <div class="bg-[#F4D35E] pb-24 rounded-b-[3.5rem] relative">
+                                <div class="absolute text-xs bottom-10 left-4">Primary</div>
+                                <div class="flex items-center justify-between p-3 text-text-title">
+                                    <div class="text-md font-semibold leading-5">
+                                        <span class="block">Mental arithmetic:</span>
+                                        <span class="block">play with the</span>
+                                        operations vacuum...
+                                    </div>
+                                    <button
+                                        class="flex flex-col justify-center items-center rounded-full border border-black shadow-custom p-1 bg-white">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                            viewBox="0 0 24 24">
+                                            <path fill="currentColor"
+                                                d="m12 19.654l-.758-.685q-2.448-2.236-4.05-3.829q-1.602-1.592-2.529-2.808q-.926-1.217-1.295-2.201Q3 9.146 3 8.15q0-1.908 1.296-3.204Q5.592 3.65 7.5 3.65q1.32 0 2.475.675T12 6.288Q12.87 5 14.025 4.325T16.5 3.65q1.908 0 3.204 1.296Q21 6.242 21 8.15q0 .996-.368 1.98q-.369.985-1.295 2.202q-.927 1.216-2.52 2.808q-1.592 1.593-4.06 3.83zm0-1.354q2.4-2.17 3.95-3.716q1.55-1.547 2.45-2.685t1.25-2.015Q20 9.006 20 8.15q0-1.5-1-2.5t-2.5-1q-1.194 0-2.204.682q-1.01.681-1.808 2.053h-.976q-.818-1.39-1.818-2.063q-1-.672-2.194-.672q-1.48 0-2.49 1Q4 6.65 4 8.15q0 .856.35 1.734t1.25 2.015t2.45 2.675Q9.6 16.112 12 18.3m0-6.825" />
+                                        </svg>
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                        <span class="absolute -top-2.5 left-5 p-2 px-3 z-1 text-xs bg-white"
+                            style="border-radius: 0.75rem 0 0.75rem 0;">Game</span>
+                    </div>
+                    <div
+                        class="flex flex-col items-center justify-center relative py-2 pb-5 space-y-4 bg-white rounded-[3.5rem] transform transition-transform duration-500 ease-in-out hover:scale-110">
+                        <div>
+                            <img src="https://medias.lumni.fr/Ta6x_8KpvEI74bniRopj6nx3ehs/276x189/filters:focal(518x535:517x534):quality(80):max_bytes(120000)/5dc2efab2055bf150f783391"
+                                class="rounded-t-[3.5rem] object-cover" />
+
+                            <div class="bg-[#F4D35E] pb-24 rounded-b-[3.5rem] relative">
+                                <div class="absolute text-xs bottom-10 left-4">Primary</div>
+                                <div class="flex items-center justify-between p-3 text-text-title">
+                                    <div class="text-md font-semibold leading-5">
+                                        <span class="block">Mental arithmetic:</span>
+                                        <span class="block">play with the</span>
+                                        operations vacuum...
+                                    </div>
+                                    <button
+                                        class="flex flex-col justify-center items-center rounded-full border border-black shadow-custom p-1 bg-white">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                            viewBox="0 0 24 24">
+                                            <path fill="currentColor"
+                                                d="m12 19.654l-.758-.685q-2.448-2.236-4.05-3.829q-1.602-1.592-2.529-2.808q-.926-1.217-1.295-2.201Q3 9.146 3 8.15q0-1.908 1.296-3.204Q5.592 3.65 7.5 3.65q1.32 0 2.475.675T12 6.288Q12.87 5 14.025 4.325T16.5 3.65q1.908 0 3.204 1.296Q21 6.242 21 8.15q0 .996-.368 1.98q-.369.985-1.295 2.202q-.927 1.216-2.52 2.808q-1.592 1.593-4.06 3.83zm0-1.354q2.4-2.17 3.95-3.716q1.55-1.547 2.45-2.685t1.25-2.015Q20 9.006 20 8.15q0-1.5-1-2.5t-2.5-1q-1.194 0-2.204.682q-1.01.681-1.808 2.053h-.976q-.818-1.39-1.818-2.063q-1-.672-2.194-.672q-1.48 0-2.49 1Q4 6.65 4 8.15q0 .856.35 1.734t1.25 2.015t2.45 2.675Q9.6 16.112 12 18.3m0-6.825" />
+                                        </svg>
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                        <span class="absolute -top-2.5 left-5 p-2 px-3 z-1 text-xs bg-white"
+                            style="border-radius: 0.75rem 0 0.75rem 0;">Game</span>
                     </div>
                 </div>
             </div>
