--- a/src/lumni.html
+++ b/src/lumni.html
@@ -39,6 +39,23 @@
 </head>
 
 <body>
+
+    <!-- Sidebar -->
+    <div class="fixed top-52 left-11 h-[400px] w-52 overflow-auto z-20 bg-white border rounded-xl">
+        <div class="flex flex-col space-y-2">
+            <a href="#" class="p-3 pt-4 border-t border-t-[#c9c3ba] border-l-4 border-l-[#3F52FF]">Math</a>
+            <a href="#" class="p-3 border-t border-t-[#c9c3ba] hover:font-bold">French</a>
+            <a href="#" class="p-3 border-t border-t-[#c9c3ba] hover:font-bold">English</a>
+            <a href="#" class="p-3 border-t border-t-[#c9c3ba] hover:font-bold">Question the world</a>
+            <a href="#" class="p-3 border-t border-t-[#c9c3ba] hover:font-bold">EMC</a>
+            <a href="#" class="p-3 border-t border-t-[#c9c3ba] hover:font-bold">Activities</a>
+            <a href="#" class="p-3 text-sm border-t border-t-[#c9c3ba] hover:font-bold">Artistic teachings</a>
+            <a href="#" class="p-3 border-t border-t-[#c9c3ba] hover:font-bold">Media education</a>
+            <a href="#" class="p-3 text-sm border-t border-t-[#c9c3ba] hover:font-bold">Discovery of professions</a>
+            <a href="#" class="p-3 text-sm border-t border-t-[#c9c3ba] hover:font-bold">Take care of yourself and others</a>
+        </div>
+    </div>
+
     <!-- Navigation -->
     <header class="text-gray-600 body-font bg-black header-v2">
         <div class="container mx-auto flex flex-wrap p-5 px-0 flex-col md:flex-row items-center">
@@ -572,16 +589,13 @@
     <footer class="text-gray-600 body-font bg-[#3F52FF]">
         <div
             class="container px-5 py-10 mx-auto flex md:items-center lg:items-start md:flex-row md:flex-nowrap flex-wrap flex-col">
-            <div class="w-64 flex-shrink-0 md:mx-0 mx-auto text-center md:text-left md:mt-0 mt-10">
+            <div class="w-64 flex-shrink-0 md:mx-0 mx-auto text-center md:text-left md:mt-0 mt-6">
                 <a class="flex title-font font-medium items-center md:justify-start justify-center text-gray-900">
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round"
-                        stroke-linejoin="round" stroke-width="2"
-                        class="w-10 h-10 text-white p-2 bg-indigo-500 rounded-full" viewBox="0 0 24 24">
-                        <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
-                    </svg>
-                    <span class="ml-3 text-xl">Tailblocks</span>
+                    <h2 class="title-font font-bold tracking-widest text-sm mb-3 text-white">Our partners</h2>
                 </a>
-                <p class="mt-2 text-sm text-gray-500">Air plant banjo lyft occupy retro adaptogen indego</p>
+                <div class="">
+                    <img src="https://www.lumni.fr/images/logos/nation.svg" alt="">
+                </div>
             </div>
             <div class="flex-grow flex flex-wrap md:pr-20 -mb-10 md:text-left text-center order-first text-white">
                 <div class="lg:w-1/4 md:w-1/2 w-full px-4"></div>
@@ -641,43 +655,19 @@
         </div>
 
         <div class="bg-black">
-            <div class="container mx-auto py-4 px-5 flex flex-wrap flex-col sm:flex-row">
-                <p class="text-white text-sm text-center sm:text-left">© 2020 Tailblocks —
-                    <a href="https://twitter.com/knyttneve" rel="noopener noreferrer" class="text-white ml-1"
-                        target="_blank">@knyttneve</a>
-                </p>
-                <span class="inline-flex sm:ml-auto sm:mt-0 mt-2 justify-center sm:justify-start">
-                    <a class="text-white">
-                        <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                            class="w-5 h-5" viewBox="0 0 24 24">
-                            <path d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z"></path>
-                        </svg>
-                    </a>
-                    <a class="ml-3 text-white">
-                        <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                            class="w-5 h-5" viewBox="0 0 24 24">
-                            <path
-                                d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z">
-                            </path>
-                        </svg>
-                    </a>
-                    <a class="ml-3 text-white">
-                        <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
-                            stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
-                            <rect width="20" height="20" x="2" y="2" rx="5" ry="5"></rect>
-                            <path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37zm1.5-4.87h.01"></path>
-                        </svg>
-                    </a>
-                    <a class="ml-3 text-white">
-                        <svg fill="currentColor" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
-                            stroke-width="0" class="w-5 h-5" viewBox="0 0 24 24">
-                            <path stroke="none"
-                                d="M16 8a6 6 0 016 6v7h-4v-7a2 2 0 00-2-2 2 2 0 00-2 2v7h-4v-7a6 6 0 016-6zM2 9h4v12H2z">
-                            </path>
-                            <circle cx="4" cy="4" r="2" stroke="none"></circle>
-                        </svg>
-                    </a>
-                </span>
+            <div
+                class="container mx-auto py-4 px-5 flex text-xs font-light text-white space-x-4 flex-wrap justify-center text-center sm:flex-row">
+                <a href="#">CGU</a>
+                <div class="border-r border-r-white"></div>
+                <a href="#">Manage my trackers</a>
+                <div class="border-r border-r-white"></div>
+                <a href="#">Who are we ?</a>
+                <div class="border-r border-r-white"></div>
+                <a href="#">Privacy Policy</a>
+                <div class="border-r border-r-white"></div>
+                <a href="#">Legal Notice</a>
+                <div class="border-r border-r-white"></div>
+                <a href="#">Sitemap</a>
             </div>
         </div>
     </footer>
