--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        @import url('output-original.css');
+        @import url('output.css');
     </style>
 </head>
 
@@ -35,7 +35,7 @@
                 <a href="#">課程框架</a>
                 <a href="#">AI故事書課程</a>
                 <a href="#">收費及計劃</a>
-                <a href="#">More</a>
+                <a href="#">Login</a>
             </div>
         </nav>
     </header>
@@ -43,17 +43,24 @@
     <!-- Hero banner -->
     <section>
         <div class="relative">
-            <div class="flex flex-col items-center text-center text-white space-y-4 absolute top-44 right-60 max-w-lg">
+            <div class="flex flex-col items-center text-center text-white space-y-4 absolute top-32 right-60 max-w-lg">
                 <div class="text-6xl" style="text-shadow: rgba(0, 0, 0, 0.4) 0px 4px 5px;">
                     <span class="font-bold tracking-widest block mb-2">外籍英語教師</span>
                     <span class="font-bold tracking-widest">1對1線上教學</span>
                 </div>
 
                 <div class="text-xl">適合年齡4-12歲</div>
-                <button
+
+
+                <div class="flex flex-col rounded shadow p-4 py-4 bg-[#F4F4F4] space-y-4 border-2 border-gray-300">
+                    <input type="text" class="focus:ring-0 border focus:outline-none text-black rounded py-2 ps-3.5 bg-white placeholder:text-gray-700" placeholder="020XXX XXX"/>
+                    <button class="py-2 bg-orange-500 hover:bg-lime-400 rounded">PLAY</button>
+                </div>
+
+                <!-- <button
                     class="bg-orange-500 w-72 text-white text-center text-lg hover:bg-lime-400 px-6 py-4 rounded-full shadow-lg hover:shadow-orange-300">
                     免費體驗試堂
-                </button>
+                </button> -->
                 <div class="text-lg"> (價值$225)</div>
                 <div class="flex items-center gap-4">
                     <img src="https://static.wixstatic.com/media/f00125_1743167db09e43ba8252f9001a438471~mv2.png/v1/fill/w_48,h_39,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/Whatsapp_Icon_large_rev.png"
