create the categories desktop version

--- a/src/quizes.html
+++ b/src/quizes.html
@@ -9,7 +9,7 @@
         /* @import url('lumnis.css'); */
 
         /* Additional CSS */
-        @import url('output.css');
+        @import url('quizes.css');
     </style>
 
     <style>
@@ -220,7 +220,7 @@
 
                                     <!-- Result -->
                                     <div
-                                        class="hidden w-full p-4 rounded-xl space-y-1 shadow-quiz border-2 border[#71e8ab] text-bas">
+                                        class="w-full p-4 rounded-xl space-y-1 shadow-quiz border-2 border[#71e8ab] text-bas">
                                         <div class="flex items-center gap-3 font-semibold">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32"
                                                 viewBox="0 0 24 24">
@@ -235,9 +235,9 @@
                                             dicta voluptatem reprehenderit ipsam inventore natus perspiciatis maiores.
                                         </p>
 
-                                        <button
-                                            class="font-semibold py-2 px-6 bg-[#3F52FF] rounded-[3.5rem] text-white">Following</button>
                                     </div>
+                                    <button
+                                        class="font-semibold py-2 px-6 bg-[#3F52FF] rounded-[3.5rem] text-white">Following</button>
                                 </div>
 
                                 <!-- Full-screen -->
